# rust_creative_template

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
docs/: index.html
src/: main.rs
