[package]
name = "TODO_RENAME"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.0", default-features = false, features = ["bevy_winit","bevy_render", "x11"] }
bevy_egui = "0.20.1"

[profile.dev.package."*"]
opt-level = 3

# (hopefully) the best of both worlds from debug and release
[profile.mid]
inherits = "dev"
debug = 1
opt-level = 3
incremental = true

[features]
dev = ["bevy/dynamic_linking"]
