[package]
name = "TODO_RENAME"
version = "0.1.0"
edition = "2021"

[dependencies]
# animation, bevy_asset, bevy_audio, bevy_gilrs, bevy_scene, bevy_winit, bevy_core_pipeline, bevy_pbr, bevy_gltf, bevy_render, bevy_sprite, bevy_text, bevy_ui, png, hdr, ktx2, zstd, vorbis, x11, filesystem_watcher, android_shared_stdcxx, tonemapping_luts
bevy = { version = "0.10.0", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "x11",
] }
bevy_egui = "0.20.1"


# (hopefully) the best of both worlds from debug and release
[profile.mid]
inherits = "dev"
debug = 1
opt-level = 3
incremental = true

[features]
dev = ["bevy/dynamic_linking"]
